自定义主题

--- a/docs/node/1.md
+++ b/docs/node/1.md
@@ -1,1 +1,30 @@
 # Node流
+
+## node流的理解？
+
+流是一种抽象的数据结构。Stream 是一个抽象接口，Node 中有很多对象实现了这个接口。例如，对http 服务器发起请求的request 对象就是一个 Stream，还有stdout（标准输出流）。
+Stream提供了以下四种类型的流：
+
+* Readable 可读流
+* Writable 可写流
+* Duplex 可读可写流
+* Transform 在读写过程中可以修改和变换数据的Duplex流
+
+使用读写方式是把文件内容全部读入内存，然后再写入文件，对于小型的文本文件问题不大，但是遇到较大的比如音频、视频文件，动辄几个GB大小实在承受不住，而流可以把文件资源拆分成小块，一块一块的运输，资源就像水流一样进行传输，使用流的话上述功能可以这样写：
+
+``` js
+var fs = require('fs');
+var readStream = fs.createReadStream('a.mp4'); // 创建可读流
+var writeStream = fs.createWriteStream('b.mp4'); // 创建可写流
+
+readStream.on('data', function(chunk) { // 当有数据流出时，写入数据
+    writeStream.write(chunk);
+});
+
+readStream.on('end', function() { // 当没有数据时，关闭数据流
+    writeStream.end();
+});
+
+```
+
+但这样写还是有一些问题的，如果说写入的速度跟不上读取的速度，有可能导致数据丢失。正常的情况应该是，写完一段，再读取下一段，如果没有写完的话，就让读取流先暂停，等写完再继续，所以为了让可读流和可写流速度一致，就要用到流中必不可少的属性`pipe`了，`pipe`翻译过来意思是管道，顾名思义，就想上面的倒水一样，如果不用一根管子相连，A桶倒进B桶的水不会均速传输，可能会导致水的浪费，用pipe可以这样解决上述问题:`pipe()`只是可读流的方法，也就是说只能从可读流中通过`pipe`方法拷贝数据到可写流，反之则不行，写的时候要注意顺序
